--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.6",
     "nodemon": "^2.0.7",
     "objection": "^2.2.15",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "sqlite3": "^5.0.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.10"
