--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --port 3000",
-    "dev": "nodemon old/server.js",
+    "dev": "nodemon servers/server.js",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
